--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -49,173 +49,32 @@
                     android:textColor="@color/theme_gray_2"
                     android:textSize="20sp" />
 
+                <androidx.cardview.widget.CardView
+                    android:layout_marginTop="20dp"
+                    android:layout_width="150dp"
+                    android:layout_height="150dp"
+                    android:layout_gravity="center"
+                    app:cardCornerRadius="100dp">
+
+                    <ImageView
+                        android:id="@+id/casinoLogoView"
+                        android:layout_width="150dp"
+                        android:layout_height="150dp"
+                        android:layout_gravity="center"
+                        android:scaleType="fitXY"
+                        android:src="@drawable/ic_launcher_background" />
+
+                </androidx.cardview.widget.CardView>
+
                 <TextView
+                    android:id="@+id/casino_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="50dp"
-                    android:text="Статистика ваших игр:"
+                    android:layout_marginTop="10dp"
+                    android:text="@string/dummy_string"
                     android:textAlignment="center"
-                    android:textColor="@color/theme_gray_2"
-                    android:textSize="20sp" />
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginTop="5dp"
-                    android:orientation="vertical">
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:gravity="center_horizontal"
-                        android:orientation="horizontal">
-
-                        <TextView
-                            android:id="@+id/blackjack_count"
-                            android:layout_width="80dp"
-                            android:layout_height="80dp"
-                            android:layout_marginHorizontal="15dp"
-                            android:layout_weight="0"
-                            android:background="@drawable/gamecount_shape"
-                            android:gravity="center"
-                            android:text="50000"
-                            android:textColor="@color/white"
-                            android:textSize="20sp"
-                            android:textStyle="bold" />
-
-                        <TextView
-                            android:id="@+id/texas_count"
-                            android:layout_width="80dp"
-                            android:layout_height="80dp"
-                            android:layout_marginHorizontal="15dp"
-                            android:layout_weight="0"
-                            android:background="@drawable/gamecount_shape"
-                            android:gravity="center"
-                            android:text="50000"
-                            android:textColor="@color/white"
-                            android:textSize="20sp"
-                            android:textStyle="bold" />
-
-                        <TextView
-                            android:id="@+id/omaxa_count"
-                            android:layout_width="80dp"
-                            android:layout_height="80dp"
-                            android:layout_marginHorizontal="15dp"
-                            android:layout_weight="0"
-                            android:background="@drawable/gamecount_shape"
-                            android:gravity="center"
-                            android:text="50000"
-                            android:textColor="@color/white"
-                            android:textSize="20sp"
-                            android:textStyle="bold" />
-
-
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:gravity="center_horizontal"
-                        android:orientation="horizontal">
-
-                        <TextView
-                            android:layout_width="80dp"
-                            android:layout_height="wrap_content"
-                            android:layout_marginHorizontal="15dp"
-                            android:layout_weight="0"
-                            android:text="Blackjack"
-                            android:textAlignment="center"
-                            android:textColor="@color/theme_gray_3"
-                            android:textSize="12sp"
-                            android:textStyle="normal" />
-
-                        <TextView
-                            android:layout_width="80dp"
-                            android:layout_height="wrap_content"
-                            android:layout_marginHorizontal="15dp"
-                            android:layout_weight="0"
-                            android:text="Техасский\nхолдем"
-                            android:textAlignment="center"
-                            android:textColor="@color/theme_gray_3"
-                            android:textSize="12sp"
-                            android:textStyle="normal" />
-
-                        <TextView
-                            android:layout_width="80dp"
-                            android:layout_height="wrap_content"
-                            android:layout_marginHorizontal="15dp"
-                            android:layout_weight="0"
-                            android:text="Омаха\nпокер"
-                            android:textAlignment="center"
-                            android:textColor="@color/theme_gray_3"
-                            android:textSize="12sp"
-                            android:textStyle="normal" />
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_marginTop="10dp"
-                        android:gravity="center_horizontal"
-                        android:orientation="horizontal">
-
-                        <TextView
-                            android:id="@+id/oazis_count"
-                            android:layout_width="80dp"
-                            android:layout_height="80dp"
-                            android:layout_marginHorizontal="15dp"
-                            android:layout_weight="0"
-                            android:background="@drawable/gamecount_shape"
-                            android:gravity="center"
-                            android:text="50000"
-                            android:textColor="@color/white"
-                            android:textSize="20sp"
-                            android:textStyle="bold" />
-
-                        <TextView
-                            android:id="@+id/yablon_count"
-                            android:layout_width="80dp"
-                            android:layout_height="80dp"
-                            android:layout_marginHorizontal="15dp"
-                            android:layout_weight="0"
-                            android:background="@drawable/gamecount_shape"
-                            android:gravity="center"
-                            android:text="50000"
-                            android:textColor="@color/white"
-                            android:textSize="20sp"
-                            android:textStyle="bold" />
-
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:gravity="center_horizontal"
-                        android:orientation="horizontal">
-
-                        <TextView
-                            android:layout_width="80dp"
-                            android:layout_height="wrap_content"
-                            android:layout_marginHorizontal="15dp"
-                            android:text="Оазис\nпокер"
-                            android:textAlignment="center"
-                            android:textColor="@color/theme_gray_3"
-                            android:textSize="12sp"
-                            android:textStyle="normal" />
-
-                        <TextView
-                            android:layout_width="80dp"
-                            android:layout_height="wrap_content"
-                            android:layout_marginHorizontal="15dp"
-                            android:text="Яблон"
-                            android:textAlignment="center"
-                            android:textColor="@color/theme_gray_3"
-                            android:textSize="12sp"
-                            android:textStyle="normal" />
-
-                    </LinearLayout>
-                </LinearLayout>
-
+                    android:textColor="@color/theme_gray_4"
+                    android:textSize="30sp" />
 
             </LinearLayout>
         </ScrollView>
