--- a/app/src/main/res/layout/fragment_transactions.xml
+++ b/app/src/main/res/layout/fragment_transactions.xml
@@ -41,7 +41,7 @@
                     android:ems="10"
                     android:hint="ID получателя"
                     android:maxLength="6"
-                    android:inputType="number|numberDecimal"
+                    android:inputType="numberPassword"
                     android:textColor="@color/black"
                     android:textColorHint="@color/theme_gray_2"
                     android:backgroundTint="@color/theme_orange_2" />
@@ -58,14 +58,13 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
+                    android:backgroundTint="@color/theme_orange_2"
                     android:ems="10"
                     android:hint="Сумма"
+                    android:inputType="numberPassword"
                     android:maxLength="6"
-                    android:textColorHint="@color/theme_gray_2"
                     android:textColor="@color/black"
-                    android:inputType="number|numberDecimal"
-                    android:backgroundTint="@color/theme_orange_2"
-                    />
+                    android:textColorHint="@color/theme_gray_2" />
 
                 <Spinner
                     android:id="@+id/transactionType"
